--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XAYNOV | OSINT Notes</title>
+    <title>xaynov | OSINT Notes</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,21 +64,23 @@
 </head>
 <body class="min-h-screen flex flex-col items-center justify-center p-6 bg-[radial-gradient(circle_at_top,_var(--tw-gradient-stops))] from-[#1a1a1a] via-[#0a0a0a] to-[#050505]">
 
-
+    <!-- Основной контейнер -->
     <main class="max-w-md w-full flex flex-col items-center animate-fade">
-
+        
+        <!-- Фото профиля -->
         <div class="relative mb-8 group">
             <div class="absolute -inset-1 bg-gradient-to-b from-white/20 to-transparent rounded-full blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
             <img src="https://i.ibb.co/XfqM930/image-e0733f.jpg" 
-                 alt="XAYNOV OSINT" 
+                 alt="xaynov OSINT" 
                  class="relative w-32 h-32 rounded-full object-cover border border-white/10 profile-img shadow-2xl"
-                 onerror="this.src='https://via.placeholder.com/150/0a0a0a/ffffff?text=XAYNOV'">
+                 onerror="this.src='https://via.placeholder.com/150/0a0a0a/ffffff?text=xaynov'">
         </div>
 
-
-        <h1 class="text-3xl font-light tracking-widest mb-2 glow-text uppercase">xaynov</h1>
+        <!-- Заголовок -->
+        <h1 class="text-3xl font-light tracking-widest mb-2 glow-text">xaynov</h1>
         <p class="text-sm text-gray-500 mb-8 tracking-tighter uppercase mono">Insights • Cases • Thoughts</p>
 
+        <!-- Био -->
         <div class="text-center mb-10 px-4">
             <p class="text-gray-300 font-light leading-relaxed">
                 Мой личный дневник с заметками по <span class="text-white font-medium">OSINT</span>. <br>
@@ -86,17 +88,55 @@
             </p>
         </div>
 
-        <footer class="mt-auto w-full pt-10 border-t border-white/5">
-            <div class="bg-white/[0.02] border border-white/5 rounded-2xl p-6">
-                <div class="flex items-center gap-2 mb-3 text-red-500/80">
-                    <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>
-                    <span class="text-xs font-semibold tracking-widest uppercase">Disclaimer</span>
+        <!-- Ссылки -->
+        <div class="w-full space-y-3 mb-16">
+            
+            <a href="https://teletype.in/@xaynov" target="_blank" class="glass flex items-center p-4 rounded-xl group">
+                <div class="w-10 flex justify-center">
+                    <svg class="w-5 h-5 opacity-70 group-hover:opacity-100 transition" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg>
                 </div>
-                <p class="text-[11px] leading-relaxed text-gray-500 mono text-justify">
-                    Контент этого сайта содержит исключительно открытые источники (OSINT). Весь контент предназначен строго для образовательных и исследовательских целей.
+                <span class="flex-grow font-light tracking-wide">Teletype Notes</span>
+                <svg class="w-4 h-4 opacity-0 group-hover:opacity-50 transition -translate-x-2 group-hover:translate-x-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+            </a>
+
+            <a href="https://t.me/osint_xaynov" target="_blank" class="glass flex items-center p-4 rounded-xl group">
+                <div class="w-10 flex justify-center">
+                    <svg class="w-5 h-5 opacity-70 group-hover:opacity-100 transition" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="22" y1="2" x2="11" y2="13"></line><polygon points="22 2 15 22 11 13 2 9 22 2"></polygon></svg>
+                </div>
+                <span class="flex-grow font-light tracking-wide">Telegram Channel</span>
+                <svg class="w-4 h-4 opacity-0 group-hover:opacity-50 transition -translate-x-2 group-hover:translate-x-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+            </a>
+
+            <a href="https://github.com/xaynov" target="_blank" class="glass flex items-center p-4 rounded-xl group">
+                <div class="w-10 flex justify-center">
+                    <svg class="w-5 h-5 opacity-70 group-hover:opacity-100 transition" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
+                </div>
+                <span class="flex-grow font-light tracking-wide">GitHub Repos</span>
+                <svg class="w-4 h-4 opacity-0 group-hover:opacity-50 transition -translate-x-2 group-hover:translate-x-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+            </a>
+
+            <a href="https://tiktok.com/@xaynov_osint" target="_blank" class="glass flex items-center p-4 rounded-xl group">
+                <div class="w-10 flex justify-center">
+                    <svg class="w-5 h-5 opacity-70 group-hover:opacity-100 transition" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 12a4 4 0 1 0 4 4V4a5 5 0 0 0 5 5"></path></svg>
+                </div>
+                <span class="flex-grow font-light tracking-wide">TikTok Content</span>
+                <svg class="w-4 h-4 opacity-0 group-hover:opacity-50 transition -translate-x-2 group-hover:translate-x-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+            </a>
+
+        </div>
+
+        <!-- Футер и Предупреждение -->
+        <footer class="w-full text-center space-y-4 opacity-40 hover:opacity-80 transition-opacity duration-500">
+            <div class="flex flex-col items-center gap-2">
+                <div class="flex items-center gap-2 text-red-500/60 justify-center">
+                    <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path></svg>
+                    <span class="text-[9px] font-bold tracking-[0.2em] uppercase">Disclaimer</span>
+                </div>
+                <p class="text-[10px] leading-relaxed max-w-xs mx-auto mono">
+                    Контент содержит только открытые источники (OSINT) и предназначен для образовательных целей.
                 </p>
             </div>
-            <p class="text-[10px] text-center text-gray-700 mt-6 mono">&copy; 2026 XAYNOV</p>
+            <p class="text-[9px] tracking-widest mono mt-4">&copy; 2026 xaynov</p>
         </footer>
 
     </main>
