--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>xaynov | OSINT Notes</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/xaynov/xaynov/main/image_e0733f.jpg">
+    
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,9 +71,10 @@
     <main class="max-w-md w-full flex flex-col items-center animate-fade">
         
         <!-- Фото профиля -->
-        <div class="relative mb-8 group">
-            <div class="absolute -inset-1 bg-gradient-to-b from-white/20 to-transparent rounded-full blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
-            <img src="https://i.ibb.co/XfqM930/image-e0733f.jpg" 
+        <div class="relative mb-8 pt-12 group">
+            <div class="absolute -inset-1 top-12 bg-gradient-to-b from-white/20 to-transparent rounded-full blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
+            <!-- Ссылка на фото изменена на raw.githubusercontent.com -->
+            <img src="https://raw.githubusercontent.com/xaynov/xaynov/main/image_e0733f.jpg" 
                  alt="xaynov OSINT" 
                  class="relative w-32 h-32 rounded-full object-cover border border-white/10 profile-img shadow-2xl"
                  onerror="this.src='https://via.placeholder.com/150/0a0a0a/ffffff?text=xaynov'">
@@ -133,7 +137,7 @@
                     <span class="text-[9px] font-bold tracking-[0.2em] uppercase">Disclaimer</span>
                 </div>
                 <p class="text-[10px] leading-relaxed max-w-xs mx-auto mono">
-                    Контент содержит только открытые источники (OSINT) и предназначен для образовательных целей.
+                    Контент этого сайта содержит исключительно открытые источники (OSINT), который предназначен строго для образовательных и исследовательских целей. 
                 </p>
             </div>
             <p class="text-[9px] tracking-widest mono mt-4">&copy; 2026 xaynov</p>
