--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
         <!-- Фото профиля -->
         <div class="relative mb-8 pt-12 group">
             <div class="absolute -inset-1 top-12 bg-gradient-to-b from-white/20 to-transparent rounded-full blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
-            <!-- Ссылка на фото изменена на raw.githubusercontent.com -->
             <img src="https://raw.githubusercontent.com/xaynov/xaynov/main/image_e0733f.jpg" 
                  alt="xaynov OSINT" 
                  class="relative w-32 h-32 rounded-full object-cover border border-white/10 profile-img shadow-2xl"
@@ -111,6 +110,15 @@
                 <svg class="w-4 h-4 opacity-0 group-hover:opacity-50 transition -translate-x-2 group-hover:translate-x-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
             </a>
 
+            <!-- Новая кнопка Price-List -->
+            <a href="https://price.xaynov.run" target="_blank" class="glass flex items-center p-4 rounded-xl group">
+                <div class="w-10 flex justify-center">
+                    <svg class="w-5 h-5 opacity-70 group-hover:opacity-100 transition" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="12" y1="1" x2="12" y2="23"></line><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"></path></svg>
+                </div>
+                <span class="flex-grow font-light tracking-wide">Price-List</span>
+                <svg class="w-4 h-4 opacity-0 group-hover:opacity-50 transition -translate-x-2 group-hover:translate-x-0" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path d="M5 12h14M12 5l7 7-7 7"></path></svg>
+            </a>
+
             <a href="https://github.com/xaynov" target="_blank" class="glass flex items-center p-4 rounded-xl group">
                 <div class="w-10 flex justify-center">
                     <svg class="w-5 h-5 opacity-70 group-hover:opacity-100 transition" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
@@ -137,7 +145,7 @@
                     <span class="text-[9px] font-bold tracking-[0.2em] uppercase">Disclaimer</span>
                 </div>
                 <p class="text-[10px] leading-relaxed max-w-xs mx-auto mono">
-                    Контент этого сайта содержит исключительно открытые источники (OSINT), который предназначен строго для образовательных и исследовательских целей. 
+                    Контент содержит только открытые источники (OSINT) и предназначен для образовательных целей.
                 </p>
             </div>
             <p class="text-[9px] tracking-widest mono mt-4">&copy; 2026 xaynov</p>
